src/components/gallery/gallery.css
/* Gallery */
.gallery {
  margin-bottom: 50px;
  width: 100%;
  min-height: 500px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  align-content: stretch;
  flex-wrap: wrap;
  background-color: white;
  padding: 20px 10px;
  border-radius: 6px;
}


/* Gallery Info */
.gallery-info {
  display: flex;
  flex-direction: column;
  width: 250px;
  margin-right: 20px;
}

.gallery-header * {
  display: inline-block;
}

.gallery-name {
  display: inline-block;
  margin: 0;
  font-size: 1.8em;
  line-height: 1.2em;
  max-height: 2.4em;
  width: 100%;
  font-weight: normal;
  word-break: break-all;
  overflow: hidden;
}

.favorited-info {
  margin-bottom: 4px;
  border-radius: 5px;
  padding: 3px 5px;
  font-size: 1em;
  background-color: var(--lighter-grey);
}

.favorite-star {
  position: relative;
  bottom: -1px;
  cursor: pointer;
  font-size: 1.25em;
}

.favorite-star:hover, .favorited {
  color: #5bc7a0;
}

.favorite-amount {
  margin: 0;
  font-size: 0.9em;
  font-style: italic;
}

.gallery-user {
  margin: 0;
  font-size: .95em;
  color: var(--dark-grey);
}

.gallery-description {
  margin: 20px 0 0 0;
  height: 100%;
  padding: 20px;
  color: var(--dark-grey);
  background-color: var(--lighter-grey);
}

/* Gallery Images Container */
.gallery-images {
  flex-grow: 10;
  display: flex;
  height: 100%;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

/* Gallery Image Viewer */
.gallery-image-viewer {
  flex-grow: 2;
  position: relative;
}

.viewed-image-container {
  width: 100%;
  height: 100%;
  min-width: 400px;
  min-height: 400px;
  position: relative;
}

.viewed-image {
  position: absolute;
  width: auto;
  height: auto;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  max-width: 100%;
  max-height: 100%;
  padding: 25px;
  border: 12px solid var(--dark-grey);
}

.viewed-image-container .heart-container {
  display: flex;
  position: absolute;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
  font-size: 200px;
  color: rgba(240,0,55,0.7);
}

.viewed-image-container .heart-container .heart {
  cursor: pointer;
}

.hearts {
  position: absolute;
  bottom: 0;
  padding: 2px;
  z-index: 1;
  background: rgba(120,120,120,0.16);
  background: linear-gradient(rgba(120,120,120,0), rgba(120,120,120,0.18) ,rgba(120,120,120,0.4));
  width: 100%;
  color: white;
  font-size: .9em;
  text-align: center;
}


.upvoted {
  color: #FF0044;
}


/* Gallery Thumbnails */
.gallery-thumbnails {
  max-width: 320px;
  height: 100%;
  margin-left: 20px;
  flex-shrink: 2;
  overflow: scroll;
}

.thumbnail-container {
  display: inline-block;
  position: relative;
  width: 75px;
  height: 75px;
  margin: 0 0 5px 5px;
  border: 2px solid var(--light-grey);
  background-color: white;
  overflow: hidden;
  cursor: pointer;
}

.thumbnail {
  position: absolute;
  width: 100%;
  top: 50%;
  transform: translateY(-50%)
}

.selected {
  border: 4px solid var(--high-light-color);
}


@media only screen and (max-width: 1288px) {
  .gallery-info {
    width: 450px;
    margin-bottom: 20px;
  }

  .gallery-name {
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

@media only screen and (max-width: 950px) {
  .gallery-image-viewer {
    margin-bottom: 20px;
  }

  .gallery-thumbnails {
    width: 100%;
    max-width: none;
    max-height: 250px;
    overflow: scroll;
  }
}

@media only screen and (max-width: 500px) {
  .gallery {
    padding: 0;
  }

  .gallery-info {
    width: 100%;
    margin: 0;
    padding: 10px;
  }

  .gallery-user {
    font-size: 1em;
    margin: 10px 0;
  }

  .favorite-star {
    font-size: 1.8em;
  }

  .gallery-name {
    font-size: 1.5em;
  }

  .gallery-user {
    font-size: 1em;
    margin: 5px 0;
  }

  .gallery-description {
    margin: 0;
  }

  .more-info-toggle {
    margin: 5px 0 0 0;
    padding: 5px;
  }

  .gallery-image-viewer {
    width: 100vw;
    margin-bottom: 5px;
    border: none;
    border-top: 3px solid var(--light-grey);
    border-bottom: 3px solid var(--light-grey);
  }

  .viewed-image-container {
    display: flex;
    align-items: center;
    min-width: 100vw;
    width: 100vw;
  }

  .viewed-image {
    border: none;
    margin: auto;
    padding: 0;
  }

  .viewed-image-container .heart-container {
    display: block;
    position: absolute;
    width: auto;
    height: auto;
    font-size: 2em;
    bottom: 5px;
    left: 5px;
    color: var(--dark-grey);
  }

  .viewed-image-container .upvoted {
    color: #FF0044;
  }

  .gallery-thumbnails {
    width: 100vw;
    max-width: 100%;
    margin: 0;
    overflow-x: scroll;
    white-space: nowrap;
  }

  .thumbnail-container {
    width: 80px;
    height: 80px;
  }

}


/* Gallery Modal */

.gallery-images.modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  transition: all 1s ease-out;
}

.gallery-images.modal .image-view-content {
  display: flex;
  flex-flow: column;
  justify-content: space-around;
  align-items: center;
}


.gallery-images.modal .thumbnails {
  position: fixed;
  bottom: 10px;
}

.gallery-images.modal .image-viewer-container {
  position: relative;
  z-index: 3;
  max-width: 500px;
  max-height: 500px;
}

.gallery-images.modal .viewed-image {
  border: 3px solid lightgrey;
  background-color: white;
  width: 100%;
}

